[package]
name = "kasuki"
version = "2.9.0"
edition = "2021"
authors = ["Valgul <contact@valgul.moe>"]
description = "A discord bot written in rust that get info from anilist API"
readme = "readme.md"
repository = "https://github.com/ValgulNecron/kasuki"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json", "multipart", "blocking"] }
serde = "1.0.203"
serde_json = "1.0.117"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "current", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "full", "unstable_discord_api"] }
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "postgres"] }
rand = "0.9.0-alpha.1"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
dotenvy = "0.15.7"
image = "0.25.1"
base64 = "0.22.1"
tracing = { version = "0.1.40" }
once_cell = "1.19.0"
tracing-subscriber = { version = "0.3.18", features = ["default", "env-filter"] }
tracing-core = "0.1.32"
serde_with = { version = "3.8.1", features = ["macros"] }
rust-fuzzy-search = "0.1.1"
palette = "0.7.6"
catbox = "0.8.2"
imgurs = "0.11.2"
tracing-appender = "0.2.3"
tonic = { version = "0.11.0", features = ["tls"] }
prost = "0.12.6"
tonic-reflection = "0.11.0"
ratatui = "0.27.0-alpha.5"
crossterm = "0.27.0"
sysinfo = "0.30.12"
tui-logger = "0.11.1"
rayon = "1.10.0"
os_info = "3.8.2"
rcgen = "0.13.1"
markdown_converter = "0.2.0"
futures = "0.3.30"
rapidfuzz = "0.5.0"
cynic = { version = "3.7.3", features = ["reqwest", "http-reqwest", "serde_json"] }
moka = { version = "0.12.7", features = ["future"] }

[build-dependencies]
tonic-build = "0.11.0"
cynic-codegen = { version = "3.7.3" }
insta = "1.39.0"

[profile.dev]
codegen-units = 512
debug = 2

[profile.release]
lto = true
strip = "symbols"
