[package]
name = "kasuki"
version = "2.10.2"
edition = "2021"
authors = ["Valgul <contact@valgul.moe>"]
description = "A discord bot written in rust that get info from anilist API"
readme = "readme.md"
repository = "https://github.com/ValgulNecron/kasuki"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "multipart", "blocking"] }
serde = "1.0.204"
serde_json = "1.0.121"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "current", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "full", "unstable_discord_api"] }
#serenity = { path = "../serenity", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "full", "unstable_discord_api"] }
tokio = { version = "1.38.2", features = ["full"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-native-tls", "postgres"] }
rand = "0.9.0-alpha.2"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
image = "0.25.2"
base64 = "0.22.1"
tracing = { version = "0.1.40" }
once_cell = "1.19.0"
tracing-subscriber = { version = "0.3.18", features = ["default", "env-filter"] }
tracing-core = "0.1.32"
serde_with = { version = "3.9.0", features = ["macros"] }
rust-fuzzy-search = "0.1.1"
palette = "0.7.6"
tracing-appender = "0.2.3"
tonic = { version = "0.12.1", features = ["tls"] }
prost = "0.13.1"
tonic-reflection = "0.12.1"
sysinfo = "0.30.13"
rayon = "1.10.0"
os_info = "3.8.2"
rcgen = "0.13.1"
markdown_converter = "0.3.4"
futures = "0.3.30"
rapidfuzz = "0.5.0"
cynic = { version = "3.7.3", features = ["reqwest", "http-reqwest", "serde_json"] }
moka = { version = "0.12.8", features = ["future"] }
toml = "0.8.16"
num-bigint = "0.4.6"
text-to-png = "0.2.0"
thiserror = "1.0.63"
#songbird = "0.4.3"

[build-dependencies]
tonic-build = "0.12.1"
cynic-codegen = { version = "3.7.3" }

[profile.dev]
codegen-units = 512
debug = 2

[profile.release]
lto = true
strip = "symbols"
