[package]
name = "kasuki"
version = "3.3.1"
edition = "2024"
authors = ["Valgul <contact@valgul.moe>"]
description = "A discord bot written in rust that get info from anilist API"
readme = "../readme.md"
repository = "https://github.com/ValgulNecron/kasuki"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json", "multipart", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.145"
serenity = { git = "https://github.com/jamesbt365/serenity.git", branch = "components-v2", default-features = false, features = ["gateway", "rustls_backend", "model", "utils", "full", "voice", "cache", "http", "unstable"] }
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.10.0-rc.0"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
image = "0.25.8"
base64 = "0.22.1"
tracing = { version = "0.1.41" }
once_cell = "1.21.3 "
tracing-subscriber = { version = "0.3.20", features = ["default", "env-filter"] }
serde_with = { version = "3.15.0", features = ["macros"] }
palette = "0.7.6"
tracing-appender = "0.2.3"
rayon = "1.11.0"
markdown_converter = "0.3.4"
futures = "0.3.31"
rapidfuzz = "0.5.0"
cynic = { version = "3.12.0", features = ["reqwest", "http-reqwest", "serde_json"] }
moka = { version = "0.12.11", features = ["future"] }
toml = "0.9.7"
num-bigint = "0.4.6"
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "serenity-next", features = ["serenity", "rustls", "builtin-queue", "gateway", "receive", "driver"] }
sea-orm = { version = "2.0.0-rc.9", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
serde_urlencoded = "0.7.1"
catbox = "0.8.2"
tempfile = "3.23.0"
anyhow = "1.0.100"
small-fixed-array = "0.4.8"
lavalink-rs = { git = "https://gitlab.com/vicky5124/lavalink-rs/", branch = "main", features = ["serenity"] }
async-trait = "0.1.89"
dashmap = "6.1.0"
bytes = "1.10.1"
rust-fuzzy-search = "0.1.1"
governor = "0.10.1"

[patch.crates-io]
serenity = { git = "https://github.com/jamesbt365/serenity.git", branch = "components-v2" }

[patch."https://github.com/serenity-rs/serenity"]
serenity = { git = "https://github.com/jamesbt365/serenity.git", branch = "components-v2" }


[build-dependencies]
cynic-codegen = { version = "3.11.0" }

[profile.dev]
debug = 2

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1

[[bin]]
name = "kasuki"
path = "src/main.rs"
