[workspace]
resolver = "2"
members = [
    "bot",
    "api-server",
    "worker",
    "Migration",
    "shared",
    "kasuki-macros",
    'image_generation'
]


[workspace.package]
version = "4.0.0"
edition = "2021"
authors = ["Valgul <contact@valgul.moe>"]
readme = "../readme.md"
repository = "https://github.com/ValgulNecron/kasuki"
license-file = "../LICENSE"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
sea-orm-migration = { version = "2.0.0-rc.31", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }

regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "multipart", "blocking", "form"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", default-features = false, features = ["gateway", "rustls_backend", "model", "utils", "full", "voice", "cache", "http", "unstable"] }
rand = "0.10.0"
chrono = "0.4.43"
uuid = { version = "1.20.0", features = ["v4"] }
image = "0.25.9"
base64 = "0.22.1"
tracing = { version = "0.1.44" }
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.22", features = ["default", "env-filter"] }
serde_with = { version = "3.16.1", features = ["macros"] }
palette = "0.7.6"
tracing-appender = "0.2.4"
rayon = "1.11.0"
markdown_converter = "0.3.4"
futures = "0.3.31"
rapidfuzz = "0.5.0"
cynic = { version = "3.12.0", features = ["reqwest", "http-reqwest", "serde_json"] }
moka = { version = "0.12.13", features = ["future"] }
toml = "1.0.0"
num-bigint = "0.4.6"
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "serenity-next", features = ["serenity", "rustls", "builtin-queue", "gateway", "receive", "driver"] }
sea-orm = { version = "2.0.0-rc.31", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
serde_urlencoded = "0.7.1"
catbox = "0.8.2"
tempfile = "3.25.0"
anyhow = "1.0.101"
small-fixed-array = "0.4.10"
lavalink-rs = { git = "https://gitlab.com/vicky5124/lavalink-rs/", branch = "main", features = ["serenity"] }
async-trait = "0.1.89"
dashmap = "6.1.0"
bytes = "1.11.1"
rust-fuzzy-search = "0.1.1"
governor = { version = "0.10.4", features = ["std"] }
tower = { version = "0.5", features = ["limit"] }
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
shared = { path = "shared" }
fluent-templates = "0.13.2"
unic-langid = "0.9.6"
fluent-syntax = "0.12.0"
walkdir = "2.5.0"
cynic-codegen = "3.12.0"
inventory = "0.3.22"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
kasuki-macros = { path = "kasuki-macros" }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
redis = { version = "1.0.4", features = ["aio", "tokio-comp"] }
sentry = { version = "0.46.2", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "tracing", "reqwest", "rustls"] }
parking_lot = "0.12.5"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }

[profile.dev]
debug = 2

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
