[package]
name = "kasuki-website-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HashChangeEvent", "Window", "Location", "Storage", "Headers", "Request", "RequestInit", "RequestMode", "Response"] }
console_error_panic_hook = "0.1.7"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4"

[workspace]
members = ["src-tauri"]
