[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm-migration = { version = "1.1.3", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.dev]
codegen-units = 512
debug = 2

[profile.release]
lto = true
strip = "symbols"

[[bin]]
name = "migration"
path = "src/main.rs"