[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
shared.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde_urlencoded.workspace = true
base64.workspace = true
tracing-subscriber.workspace = true
