[package]
name = "image_generation"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
shared.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
base64.workspace = true
image.workspace = true
palette.workspace = true
rayon.workspace = true
uuid.workspace = true
redis.workspace = true
sentry.workspace = true
