[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
sea-orm.workspace = true
moka.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
cynic.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
cynic-codegen = "3.12.0"